[gd_scene load_steps=5 format=3 uid="uid://46gsuqj43ym3"]

[ext_resource type="Script" uid="uid://dd0f3gqcfvrtt" path="res://Assets/sequencer/start_button.gd" id="1_2jedh"]
[ext_resource type="Texture2D" uid="uid://corvde5dqo4ed" path="res://Assets/Placeholder/Case_Play.png" id="2_2jedh"]
[ext_resource type="Texture2D" uid="uid://b8hjjbej0m7nn" path="res://Assets/Case_Stop.png" id="3_fu2v1"]
[ext_resource type="AudioStream" uid="uid://dk0hmxp78hmrq" path="res://Assets/audio/click.mp3" id="3_krl1o"]

[node name="Sprite2D" type="Sprite2D"]
position = Vector2(27, 31)
texture = ExtResource("2_2jedh")

[node name="start_button" type="Button" parent="." groups=["start_button"]]
self_modulate = Color(1, 1, 1, 0)
offset_left = -27.0
offset_top = -31.0
offset_right = 42.5
offset_bottom = 1.0
scale = Vector2(0.775, 1.775)
script = ExtResource("1_2jedh")

[node name="pausse" type="Sprite2D" parent="." groups=["pause_button"]]
visible = false
position = Vector2(-1, -1)
texture = ExtResource("3_fu2v1")

[node name="click_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_krl1o")
volume_db = 7.0

[connection signal="button_down" from="start_button" to="start_button" method="_on_button_down"]
[connection signal="button_up" from="start_button" to="start_button" method="_on_button_up"]
[connection signal="mouse_entered" from="start_button" to="start_button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="start_button" to="start_button" method="_on_mouse_exited"]
